[tool.poetry]
name = "tsmock"
version = "0.1.0"
description = ""
authors = ["Erik Aronesty <erik@atakama.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.8"

[tool.poetry.dev-dependencies]
astroid = "*"
pytest = "*"
pytest-cov = "*"
pylint = "*"
coverage = "*"
black = "*"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | env
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
