[tool.poetry]
name = "tsmock"
readme = "README.md"
version = "0.1.2"
description = "Thread safe wrapper around unittest.mock"
authors = ["Erik Aronesty <erik@atakama.com>"]
keywords = ["thread", "unittest", "mock"]
license = "MIT"
homepage = "https://github.com/AtakamaLLC/tsmock"
repository = "https://github.com/AtakamaLLC/tsmock"

[tool.poetry.dependencies]
python = ">=3.6.8"

[tool.poetry.dev-dependencies]
astroid = "*"
pytest = "*"
pytest-cov = "*"
pylint = "*"
coverage = "*"
black = "*"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | env
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
